src/test/deca/context/invalid/ContextSansObjet/OperationsBooleennes/GtBoolBool.deca
//Description:
//  Vérification contextuelle de > avec des types incompatibles (boolean, boolean)
//
//Résultat:
//  Erreur contextuelle
//  ligne 10 : types non compatibles pour faire la comparaison
{
    boolean x = false;
    boolean y = true;
    x > y ;
}